# openface-gaze-accessibility-input

./: .gitignore  README.md  run.sh  run_cam.sh  run_dwell_replay.sh  run_eval.sh  run_fit_calibration.sh  run_gaze_pipeline.sh  run_keyboard_mvp.sh  run_keyboard_summary.sh  run_rerank_demo.sh  毕业设计落地文档.md  论文写作_RULES.md  论文写作_对话约定.md  论文写作落地方案.md  论文初稿_中文摘要.md  论文初稿_参考文献.md  论文初稿_目录.md  论文初稿_第1章_绪论.md  论文初稿_第2章_相关技术与理论基础.md  论文初稿_第3章_写作前思考与提纲.md  论文初稿_第3章_基于OpenFace的实时视线估计优化方法.md  论文初稿_第4章_无障碍眼控输入系统设计与实现.md  论文初稿_第5章_实验设计与结果分析.md  论文初稿_第6章_结论与展望.md  论文初稿_英文摘要.md  集美大学海洋信息工程学院毕业论文参考模板(2025版)（定稿）.docx  项目启动确认清单.md
gaze-attention-system/: PROGRESS.md  README.md  pyproject.toml
gaze-attention-system/config/: default.json
gaze-attention-system/experiments/: compare_features.py  compare_gpt_vs_rules.py  compare_smoothing.py
gaze-attention-system/gui/: __init__.py  attention_dashboard.py  main_window.py
gaze-attention-system/scripts/: run_app.py
gaze-attention-system/src/gaze_input/: __init__.py  csv_parser.py  (+8 more)
gaze-keyboard-v2/project/: README.md  pyproject.toml
project/: README.md  pyproject.toml
project/cpp_core/: README.md
project/docs/: AGENT_HANDOFF.md
project/scripts/: check_m0_contract.py  check_m1_alignment.py  check_m2_alignment.py  compare_runtime_backends.py  evaluate_keyboard_task.py  fit_9point_calibration.py  replay_dwell_targets.py  run_gaze_cpp_pipeline.py  run_gaze_pipeline.py  run_keyboard_mvp.py  run_openface_baseline.py  run_openface_live_pipeline.py  summarize_keyboard_session.py
project/test_cmd/: check_gui_env.sh  run_cam_baseline.sh
(+121 files in other folders)
