[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaze-attention-system"
version = "0.1.0"
description = "基于 OpenFace 的实时视线估计优化与课堂注意力检测系统"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "openai>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
