[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaze-keyboard-v2"
version = "0.1.0"
description = "Realtime gaze keyboard scaffold for OpenFace-based thesis project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8,<3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
